Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.2, 6.8.0 Beta2
-
Windows 10 22H2
-
d70abd83d (dev), 6a2308e50 (dev)
Description
All QML tools (qmllint, qmlsc, qmlls) flag badVar1, badVar2, and badVar3... but not badVar4:
Attachments
Issue Links
- relates to
-
QTBUG-127323 qmllint warnings disappear sometimes
-
- Open
-
For Gerrit Dashboard: QTBUG-127624 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
580547,20 | Compiler: Create infrastructure to support multiple warnings | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
581315,34 | Compiler: Don't stop after first diagnostic | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |